# fosscord-server-rs

./: Cargo.toml  rust-toolchain.toml
.github/: dependabot.yml
migrations/mariadb/: 0_foreign_keys.sql  10_webhooks.sql  11_stickers.sql  12_attachments.sql  13_messages.sql  14_read_states.sql  15_invites.sql  16_voice_states.sql  17_channels.sql  18_emojis.sql  19_templates.sql  1_config.sql  20_guilds.sql  21_team_members.sql  22_teams.sql  23_applications.sql  24_audit_logs.sql  25_categories.sql  26_rate_limits.sql  27_sessions.sql  28_sticker_packs.sql  29_client_release.sql  2_relationships.sql  30_notes.sql  31_member_roles.sql  32_message_user_mentions.sql  33_message_role_mentions.sql  34_message_channels_mentions.sql  35_message_stickers.sql  36_query_result_cache.sql  37_plugin_config.sql  38_user_settings.sql  39_valid_registration_tokens.sql  3_connected_accounts.sql  4_users.sql  5_backup_codes.sql  6_bans.sql  7_recipients.sql  8_roles.sql  9_members.sql
src/: lib.rs  main.rs  shared.rs  stats.rs
src/gateway/: mod.rs
src/gateway/utils/: constants.rs  mod.rs  websocket.rs
src/utils/: mod.rs
src/utils/config/: mod.rs
src/utils/database/: migrator.rs  mod.rs  sql_parser.rs
src/utils/dtos/: dm_channel.rs  mod.rs  user.rs
src/utils/entities/: application.rs  connected_account.rs  mod.rs  relationship.rs  session.rs  user.rs  user_settings.rs
src/utils/interfaces/: activity.rs  mod.rs  status.rs
src/utils/other/: intents.rs  mod.rs  permission.rs  string.rs
src/utils/schemas/: auth_schemas.rs  mod.rs
src/utils/types/: mod.rs  snowflake.rs
(+10 files in other folders)
