[package]
name = "fosscord-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
actix-web = "4.3.1"
actix-web-validator = "5.0.1"
actix-web-actors = "4.2.0"

# Terminal and logging
ansi_term = "0.12.1"
env_logger = "0.10.0"
log = "0.4.17"

# Databases and data manipulation
serde_json = "1.0.94"
rust-s3 = "0.32.3"
lapin = "2.1.1"

# Image processing
kamadak-exif = "0.5.5"
infer = "0.13.0"
imagesize = "0.11.0"

# Auth and crypto
bcrypt = "0.14.0"
jsonwebtoken = "8.2.0"
boringauth = "0.9.0"

# System
num_cpus = "1.15.0"

# Miscellaneous
sentry = "0.30.0"
chrono = "0.4.23"
derivative = "2.2.0"
async-trait = "0.1.66"
once_cell = "1.17.1"
regex = "1.7.1"
rand = "0.8.5"
flate2 = "1.0.25"

[dependencies.tokio]
version = "1.26.0"
features = ["full"]

[dependencies.validator]
version = "0.16.0"
features = ["derive"]

[dependencies.serde]
version = "1.0.153"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.14"
features = ["json"]

[dependencies.sea-orm]
version = "0.11.0"
features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"]

[dependencies.sea-orm-migration]
version = "0.11.0"
features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"]

[dependencies.nix]
version = "0.26.2"
features = ["user"]